[project]
name = "kiku"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "celery>=5.6.2",
    "elevenlabs>=2.40.0",
    "fastapi[standard]>=0.135.1",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
]
